--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 /* Root variables and global styling */
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Roboto, Helvetica, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -27,11 +27,11 @@ body {
   margin: 0;
   height: 100vh;
   width: 100%;
-  font-family: Arial, sans-serif;
-  background-color: #000; 
-  background-image: url('./assets/scarletfury.jpg'); 
+  font-family: 'Roboto Condensed', Helvetica, sans-serif;
+  background-color: #000;
+  background-image: url('./assets/scarletfury.jpg');
   background-repeat: no-repeat;
-  background-position: right center; 
+  background-position: right center;
   background-size: auto 100%; /* Maintain aspect ratio and stretch vertically */
   background-attachment: fixed; /* Keep the image fixed in place */
 }
@@ -253,7 +253,7 @@ body {
 /* Main Grid Layout */
 .main-grid {
   display: grid;
-  grid-template-columns: 2fr 8fr 4fr;
+  grid-template-columns: 4fr 18fr 6fr;
   gap: 15px;
 }
 
@@ -294,34 +294,89 @@ body {
   justify-content: space-between;
   background-color: #2c2f33;
   padding: 10px;
-  border-bottom: 1px solid #ffffff;
+  border-bottom: 1px solid #ccc;
 }
 
 .tab-button {
   flex: 1;
+  padding: 5px;
+  font-size: 1rem;
+  text-align: center;
+  color: #8a8a8a;
+  background-color: #2c2f33;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  border-radius: 15px;
+  font-weight: bold;
+}
+
+.tab-button:hover {
+  background-color: #ff6a6a;
+  color: #ffffff;
+}
+
+.tab-button.active {
+  color: #ffffff;
+  text-decoration: underline;
+  text-decoration-thickness: 4px;
+  text-decoration-color: #ff4141;
+}
+
+.tab-button.active:hover {
+  background-color: #2c2f33;
+  cursor: auto;
+}
+
+.role-tabs-navigation {
+  display: flex;
   padding: 10px;
-  font-size: 0.9rem;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #ccc;
+  height: 5%;
+}
+
+.role-tab-button {
+  padding: 5px;
+  font-size: 0.8rem;
   text-align: center;
   color: #ffffff;
   background-color: #2c2f33;
   border: none;
   cursor: pointer;
-  transition: background-color 0.3s ease;
+  border-radius: 5px;
+  margin-right: 10px;
 }
 
-.tab-button:hover {
-  background-color: #ff4141;
+.role-tab-button:hover {
+  background-color: #ff6a6a;
 }
 
-.tab-button.active {
+.role-tab-button.active {
   background-color: #ff1010;
   font-weight: bold;
 }
 
-.role-dashboard {
-  padding: 15px;
-  color: #ffffff;
+.role-tab-button.active:hover {
+  background-color: #ff1010;
+  cursor: auto;
 }
+
+.role-tab-content {
+  margin-top: 10px;
+  height: 90%;
+  overflow-y: auto;
+}
+
+.role-dashboard {
+  position: relative;
+  height: 45vh;
+
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+
 
 .dashboard-heading {
   text-align: center;
@@ -331,50 +386,62 @@ body {
   text-decoration: underline;
 }
 
-.abilities-table {
+.features-table {
   width: 100%;
   border-collapse: collapse;
   margin-top: 10px;
   table-layout: fixed; /* Ensures consistent column widths */
 }
 
-.abilities-table th,
-.abilities-table td {
+.features-table th,
+.features-table td {
   border: 1px solid #ffffff;
   padding: 8px;
   text-align: left;
-  color: #ffffff;
 }
 
-.abilities-table th {
+.features-table th {
   background-color: #2c2f33;
   font-weight: bold;
 }
 
 /* Set column widths */
-.abilities-table th:nth-child(1),
-.abilities-table td:nth-child(1) {
+.features-table th:nth-child(1),
+.features-table td:nth-child(1) {
   width: 10%; /* First column for 'Level' */
 }
 
-.abilities-table th:nth-child(2),
-.abilities-table td:nth-child(2) {
+.features-table th:nth-child(2),
+.features-table td:nth-child(2) {
   width: 20%; /* Second column for ability name */
 }
 
-.abilities-table th:nth-child(3),
-.abilities-table td:nth-child(3) {
+.features-table th:nth-child(3),
+.features-table td:nth-child(3) {
   width: 70%; /* Third column for descriptions */
 }
 
 /* Row styling */
-.abilities-table tbody tr:nth-child(even) {
-  background-color: #3b3f46;
+.features-table tbody tr:nth-child(even) {
+  background-color: #330000;
 }
 
-.abilities-table tbody tr:nth-child(odd) {
-  background-color: #2c2f33;
+.features-table tbody tr:nth-child(odd) {
+  background-color: #220000;
 }
+
+.role-dashboard .features-table tbody tr.unavailable-feature {
+  text-decoration: line-through;
+  text-decoration-color: #999999;
+  color: #999999 !important; /* Ensure text color overrides */
+  pointer-events: none; /* Disable interactions */
+}
+
+/* Add hover effect for table rows */
+.role-dashboard .features-table tbody tr:hover {
+  background-color: #444444; /* Change to your desired hover background color */
+}
+
 
 .character-data-card {
   padding: 15px;
@@ -395,7 +462,7 @@ body {
   display: grid;
   grid-template-columns: auto 1fr; /* Dynamic width for scores, remaining space for info */
   gap: 20px; /* Space between the columns */
-  align-items: start; 
+  align-items: start;
   width: 100%;
 }
 
@@ -403,7 +470,7 @@ body {
   display: grid;
   grid-template-columns: repeat(6, auto); /* Default: 6 cards per row */
   gap: 10px; /* Space between cards */
-  justify-content: end; 
+  justify-content: end;
 }
 
 @media (max-width: 1600px) {
@@ -443,4 +510,52 @@ body {
 .character-score-value {
   font-size: 0.5em;
   color: #d1d5db;
+}
+
+.centered-in-card {
+  text-align: center; /* Centers text horizontally */
+  margin: 0 auto; /* Optional: Adjust margin for consistency */
+  line-height: 1.5; /* Optional: Improves readability */
+}
+
+.morale-red {
+  color: #ff4d4d; /* Bright Red */
+
+  font-weight: bold;
+}
+
+.morale-orange {
+  color: #ff9900; /* Bright Orange */
+
+  font-weight: bold;
+}
+
+.morale-yellow {
+  color: #cccc00; /* Bright Yellow */
+
+  font-weight: bold;
+}
+
+.morale-lime {
+  color: #66cc66; /* Bright Lime */
+
+  font-weight: bold;
+}
+
+.morale-green {
+  color: #009900; /* Bright Green */
+
+  font-weight: bold;
+}
+
+.morale-display {
+  text-align: center;
+  padding: 10px;
+  border-radius: 5px; /* Optional: For rounded edges */
+  font-size: 1.2rem; /* Adjust font size as needed */
+}
+
+.line-graph {
+  text-align: center;
+  margin: 0 !important;
 }
