--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,6 @@
 /* Root variables and global styling */
 :root {
-  font-family: Roboto, Helvetica, sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -27,7 +27,8 @@ body {
   margin: 0;
   height: 100vh;
   width: 100%;
-  font-family: 'Roboto Condensed', Helvetica, sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-style: normal;
   background-color: #000;
   background-image: url('./assets/scarletfury.jpg');
   background-repeat: no-repeat;
@@ -427,6 +428,10 @@ body {
   width: 70%; /* Third column for descriptions */
 }
 
+.ability-description {
+  font-style: italic;
+}
+
 /* Row styling */
 .features-table tbody tr:nth-child(even) {
   background-color: #330000;
@@ -576,4 +581,24 @@ body {
   justify-content: center; /* Center content horizontally (if needed) */
   align-items: flex-end;   /* Align content to the bottom of the container */
   background: #00000000;   /* Optional: Add a background color for contrast */
+}
+
+text.ship-svg-text {
+  font-size: 1rem;
+  line-height: 1rem;
+  font-weight: 400;
+}
+
+.role-utility-container {
+  position: relative;
+  height: 500px; /* Or any height you prefer */
+  width: 500px; /* Or any width you prefer */
+}
+
+.role-utility-panel {
+  display: flex;
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
+  height: 100%; /* Ensure it takes up the full height of the parent */
+  width: 100%; /* Optional, ensures it spans the full width of the parent */
 }
