--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -80,13 +80,19 @@ body {
   cursor: default;
 }
 
+.top-bar h1, p {
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+
+
 /* General Styling for Cards */
 .card {
   background-color: rgba(20, 20, 20, 0.9);
   color: #ffffff;
   border-radius: 8px;
   padding: 15px;
-  margin-bottom: 15px;
+  margin-top: 15px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column; /* Stack content vertically */
@@ -103,11 +109,23 @@ body {
   text-decoration: underline;
 }
 
+.card h4
+ {
+  text-decoration: underline;
+}
+
+.master-gunner-panel p {
+  text-indent: 0.5em;
+}
+
 .card h3,
+.card h4,
 .card p {
   margin-top: 0;
   margin-bottom: 5px;
 }
+
+
 
 /* Helm Card */
 .helm-card {
@@ -173,7 +191,7 @@ body {
 .horizontal-cards {
   display: flex;
   justify-content: space-between;
-  margin: 15px 0;
+  margin: 0;
 }
 
 .horizontal-cards .card {
@@ -370,15 +388,14 @@ body {
 }
 
 .role-tab-content {
-  margin-top: 10px;
+  padding-top: 10px;
   height: 90%;
   overflow-y: auto;
 }
 
 .role-dashboard {
   position: relative;
-  height: 45vh;
-
+  height: 60vh;
   padding: 10px;
   box-sizing: border-box;
 }
@@ -389,6 +406,7 @@ body {
   text-align: center;
   font-size: 1.5rem;
   color: #ffffff;
+  margin-top: 0;
   margin-bottom: 10px;
   text-decoration: underline;
 }
@@ -428,7 +446,8 @@ body {
   width: 70%; /* Third column for descriptions */
 }
 
-.ability-description {
+.ability-description,
+.ammo-description {
   font-style: italic;
 }
 
@@ -589,6 +608,12 @@ text.ship-svg-text {
   font-weight: 400;
 }
 
+text.ship-svg-large-text {
+  font-size: 1.5rem;
+  line-height: 1.5rem;
+  font-weight: 500;
+}
+
 .role-utility-container {
   position: relative;
   height: 500px; /* Or any height you prefer */
@@ -597,8 +622,19 @@ text.ship-svg-text {
 
 .role-utility-panel {
   display: flex;
+  flex-direction: column;
   justify-content: center; /* Center horizontally */
   align-items: center; /* Center vertically */
   height: 100%; /* Ensure it takes up the full height of the parent */
   width: 100%; /* Optional, ensures it spans the full width of the parent */
+}
+
+.master-gunner-panel {
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+button {
+  font-family: 'Roboto Condensed', sans-serif;
 }
