--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -16,7 +16,8 @@
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Roboto Condensed', sans-serif;
-  margin-top: 0;
+  margin-top: 0.25em;
+  margin-bottom: 0.25em;
 }
 
 a {
@@ -99,7 +100,8 @@ input {
   cursor: default;
 }
 
-.top-bar h1, p {
+.top-bar h1,
+.top-bar p {
   margin-block-start: 0;
   margin-block-end: 0;
 }
@@ -307,7 +309,8 @@ input {
 
 /* Page Content */
 .content {
-  padding: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
   line-height: 1.3;
 }
 
@@ -426,7 +429,7 @@ input {
 .role-tab-content {
   position: absolute;
   padding-top: 10px;
-  height: 90%;
+  height: 87.5%;
   overflow-y: auto;
 }
 
@@ -515,6 +518,7 @@ input {
   background-color: rgba(44, 47, 51, 0.9); /* Matching card background */
   border: 1px solid #ffffff; /* White border */
   border-radius: 8px;
+  width: 425px;
 }
 
 .character-name-header {
@@ -670,6 +674,12 @@ text.ship-svg-large-text {
   height: 100%;
   display: grid;
   grid-template-columns: 1fr 3fr;
+}
+
+.master-gunner-approved-orders-wrapper button {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
 }
 
 button {
@@ -853,7 +863,8 @@ ul li {
   margin-right: 5px;
 }
 
-.stat-edit-container h3, p {
+.stat-edit-container h3,
+.stat-edit-container p {
   margin-top: 10px;
   margin-bottom: 10px;
 }
@@ -872,6 +883,16 @@ ul li {
 
 .weapons-info-admin-card h3 {
   text-decoration: underline;
+}
+
+.ship-info-admin-card h3,
+.hull-info-admin-card h3 {
+  margin-bottom: 0;
+}
+
+.admin-card p {
+  margin-top: 2.5px;
+  margin-bottom: 2.5px;
 }
 
 .sails-data {
@@ -917,14 +938,24 @@ ul li {
   gap: 10px;
 }
 
-.admin-panel-header button {
-  font-family: 'Roboto Condensed', sans-serif;
+.admin-panel-header button,
+.master-gunner-approved-orders-wrapper button {
+  font-family: 'Roboto Condensed', sans-serif !important;
   font-weight: 400;
   font-size: 1.25rem;
   border-radius: 0.25rem;
   border: solid 1px white;
   padding: 5px;
   background-color: #323232;
+}
+
+.attack-complete-button {
+  background-color: #009900 !important;
+  cursor: pointer;
+}
+
+.attack-complete-button:hover {
+  background-color: #00cc00 !important;
 }
 
 .admin-panel-header input {
@@ -978,6 +1009,83 @@ ul li {
   border-radius: 10px;
   z-index: 1000;
   padding: 25px;
+}
+
+.attack-modal {
+  position: absolute;
+  left: 65%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  height: 480px;
+  width: 640px;
+  background: rgba(0, 0, 0, 0.9);
+  color: white;
+  border: solid 2px red;
+  border-radius: 10px;
+  z-index: 1000;
+  padding: 25px;
+}
+
+.approved-orders-table {
+  font-size: 1rem;
+  margin: 25px;
+  width: 90%;
+}
+
+table {
+  border-collapse: collapse;
+}
+
+.approved-orders-table table,
+.approved-orders-table th,
+.approved-orders-table td {
+  border: 2px solid;
+  border-color: grey;
+
+}
+
+.approved-orders-table th {
+  text-align: left;
+  text-decoration: underline;
+}
+
+/* Row styling */
+.approved-orders-table tbody tr:nth-child(even) {
+  background-color: #330000;
+}
+
+.approved-orders-table tbody tr:nth-child(odd) {
+  background-color: #220000;
+}
+
+/* Add hover effect for table rows */
+.approved-orders-table tbody tr:hover {
+  background-color: #444444; /* Change to your desired hover background color */
+}
+
+.approved-orders-table th,
+.approved-orders-table td {
+  padding: 8px;
+}
+
+.orders-request-panel ul {
+  display: flex;
+  flex-direction: row;
+}
+
+.orders-request-panel li {
+  font-size: 1.5rem;
+  font-weight: 300;
+  margin: 25px;
+}
+
+.orders-request-panel p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.orders-request-panel button {
+  margin-left: 10px;
 }
 
 .close-modal-button {
